[gd_scene load_steps=20 format=3 uid="uid://bao6mpt78i3xq"]

[ext_resource type="Script" uid="uid://bnp4xnv7b18kj" path="res://scripts/npc/willames.gd" id="1_d7wen"]
[ext_resource type="Texture2D" uid="uid://4m8t05lh3wq3" path="res://assets/Personagens/Willames/Willames_pixilart-sprite.png" id="2_f876p"]
[ext_resource type="Texture2D" uid="uid://c35fej0lrihna" path="res://assets/Personagens/Willames/new_atlas_texture.tres" id="3_mxdmd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_12igr"]
atlas = ExtResource("2_f876p")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_njy0a"]
atlas = ExtResource("2_f876p")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_01v6n"]
atlas = ExtResource("2_f876p")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2ytv"]
atlas = ExtResource("2_f876p")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rdjs"]
atlas = ExtResource("2_f876p")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sd56j"]
atlas = ExtResource("2_f876p")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkdg1"]
atlas = ExtResource("2_f876p")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdrbf"]
atlas = ExtResource("2_f876p")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cavfo"]
atlas = ExtResource("2_f876p")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vejb"]
atlas = ExtResource("2_f876p")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7p38"]
atlas = ExtResource("2_f876p")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_emstt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_12igr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njy0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01v6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2ytv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rdjs")
}],
"loop": true,
"name": &"andar_direita",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sd56j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkdg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdrbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cavfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vejb")
}],
"loop": true,
"name": &"andar_esquerda",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7p38")
}, {
"duration": 1.0,
"texture": ExtResource("3_mxdmd")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_12igr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a4n25"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 0.470588)

[sub_resource type="LabelSettings" id="LabelSettings_h762v"]
shadow_size = 7
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_njy0a"]
size = Vector2(118, 62)

[node name="willames" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_d7wen")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_emstt")
animation = &"andar_esquerda"
autoplay = "idle"
frame_progress = 0.180706

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 3)
shape = SubResource("CapsuleShape2D_12igr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CaixaDialogo" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 65.0
offset_top = 228.0
offset_right = 585.0
offset_bottom = 324.0
theme_override_styles/normal = SubResource("StyleBoxFlat_a4n25")
autowrap_mode = 2

[node name="TextoDialogo" type="Label" parent="CanvasLayer"]
offset_left = 147.0
offset_top = 254.0
offset_right = 581.0
offset_bottom = 319.0
theme_override_font_sizes/font_size = 14
vertical_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="CanvasLayer"]

[node name="nomelabel" type="Label" parent="CanvasLayer"]
offset_left = 147.0
offset_top = 231.0
offset_right = 245.0
offset_bottom = 254.0

[node name="Retrato" type="TextureRect" parent="CanvasLayer"]
offset_left = 73.0
offset_top = 248.0
offset_right = 133.0
offset_bottom = 307.0
stretch_mode = 5

[node name="LabelInteracao" type="Label" parent="."]
offset_left = -18.0
offset_top = -48.0
offset_right = 22.0
offset_bottom = -25.0
label_settings = SubResource("LabelSettings_h762v")
horizontal_alignment = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 2)
shape = SubResource("RectangleShape2D_njy0a")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
